Change package.json, Create CI

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "chinesenumerals",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "description": "Chinese numeral translator",
-  "main": "index.js",
+  "main": "chinesenumerals.js",
   "scripts": {
     "test": "mocha"
   },
